--- a/client/src/pages/Home/home.css
+++ b/client/src/pages/Home/home.css
@@ -1,20 +1,19 @@
-.App {
+.Home {
   text-align: center;
 }
 
-.App-logo {
+.Home-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
 
-.App-header {
-  background-color: #222;
+.Home-header {
   height: 150px;
   padding: 20px;
   color: white;
 }
 
-.App-intro {
+.Home-intro {
   font-size: large;
 }
 
